--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/bootstrap-slider.min.css">
+    <link rel="stylesheet" href="css/jquery.bxslider.css">
     <link rel="stylesheet" href="css/style.css">
 
     <script src="js/jquery.js"></script>
@@ -17,6 +18,7 @@
         crossorigin="anonymous"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/bootstrap-slider.min.js"></script>
+    <script src="js/jquery.bxslider.js"></script>
     <script src="js/customize.js"></script>
 
     <link href="https://fonts.googleapis.com/css?family=Prompt:300,400,600|Roboto:300,400,500&amp;subset=thai" rel="stylesheet">
@@ -287,111 +289,226 @@
             <h2 class="header-section h-package mb-3">Spidy
                 <span class="header-section-sub">Package</span>
             </h2>
-            <div class="card-deck package-list mb-3 text-center text-dark">
-                <div class="card mb-4 box-shadow">
-                    <div class="card-header bg-theme">Student PACK1
-                        <h2 class="mt-3">฿499</h2>
-                        <p class="f-20">/เดือน</p>
+            <div class="device-md">
+                <div class="card-deck package-list mb-3 text-center text-dark">
+                    <div class="card mb-4 box-shadow">
+                        <div class="card-header bg-theme">Student PACK1
+                            <h2 class="mt-3">฿499</h2>
+                            <p class="f-20">/เดือน</p>
+                        </div>
+                        <div class="card-body">
+                            <p class="card-text text-left">แพ็กเกจเริ่มต้นสำหรับผู้ที่ต้องการ ทดลองใช้ cloud server และมี ความรู้พื้นฐานด้าน server</p>
+                        </div>
+                        <div class="card-body secondary">
+                            <ul>
+                                <li>
+                                    <p class="card-text text-left">
+                                        <i class="fa fa-fw fa-sliders color-theme"></i>
+                                        สามารถควบคุมผ่านBrowser
+                                    </p>
+                                </li>
+                                <li>
+                                    <p class="card-text text-left">
+                                        <i class="fa fa-fw fa-database color-theme"></i>
+                                        จัดเก็บข้อมูลได้ง่าย
+                                    </p>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="card-footer">
+                            <button type="button" class="btn btn-primary btn-package mb-2">รายละเอียดเพิ่มเติม</button>
+                            <button type="button" class="btn btn-primary btn-package" id="student1">เลือก</button>
+                        </div>
                     </div>
-                    <div class="card-body">
-                        <p class="card-text text-left">แพ็กเกจเริ่มต้นสำหรับผู้ที่ต้องการ ทดลองใช้ cloud server และมี ความรู้พื้นฐานด้าน server</p>
+                    <div class="card mb-4 box-shadow">
+                        <div class="card-header bg-theme">Student PACK2
+                            <h2 class="mt-3">฿3,129</h2>
+                            <p class="f-20">/เดือน</p>
+                        </div>
+                        <div class="card-body">
+                            <p class="card-text text-left">แพ็กเกจสำหรับผู้ที่ใช้งานเป็นต้องการใช้พื้นที่จักเก็บและรวดเร็วในการดึงข้อมูลมากกว่าเดิม
+                            </p>
+                        </div>
+                        <div class="card-body secondary">
+                            <ul>
+                                <li>
+                                    <p class="card-text text-left">
+                                        <i class="fa fa-fw fa-sliders color-theme"></i>
+                                        สามารถควบคุมผ่านBrowser
+                                    </p>
+                                </li>
+                                <li>
+                                    <p class="card-text text-left">
+                                        <i class="fa fa-fw fa-database color-theme"></i>
+                                        จัดเก็บข้อมูลได้ง่าย
+                                    </p>
+                                </li>
+                                <li>
+                                    <p class="card-text text-left">
+                                        <i class="fa fa-fw fa-cog color-theme"></i>
+                                        ปรับแต่งการทำงานได้
+                                    </p>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="card-footer">
+                            <button type="button" class="btn btn-primary btn-package mb-2">รายละเอียดเพิ่มเติม</button>
+                            <button type="button" class="btn btn-primary btn-package" id="student2">เลือก</button>
+                        </div>
                     </div>
-                    <div class="card-body secondary">
-                        <ul>
-                            <li>
-                                <p class="card-text text-left">
-                                    <i class="fa fa-fw fa-sliders color-theme"></i>
-                                    สามารถควบคุมผ่านBrowser
-                                </p>
-                            </li>
-                            <li>
-                                <p class="card-text text-left">
-                                    <i class="fa fa-fw fa-database color-theme"></i>
-                                    จัดเก็บข้อมูลได้ง่าย
-                                </p>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="card-footer">
-                        <button type="button" class="btn btn-primary btn-package mb-2">รายละเอียดเพิ่มเติม</button>
-                        <button type="button" class="btn btn-primary btn-package" id="student1">เลือก</button>
+                    <div class="card mb-4 box-shadow">
+                        <div class="card-header bg-theme">Student PACK3
+                            <h2 class="mt-3">฿6,249</h2>
+                            <p class="f-20">/เดือน</p>
+                        </div>
+                        <div class="card-body">
+                            <p class="card-text text-left">แพ็กเกจสำหรับการทำงานเป็นทีม เหมาะกับงานที่มีขนาดใหญ่</p>
+                        </div>
+                        <div class="card-body secondary">
+                            <ul>
+                                <li>
+                                    <p class="card-text text-left">
+                                        <i class="fa fa-fw fa-sliders color-theme"></i>
+                                        สามารถควบคุมผ่านBrowser
+                                    </p>
+                                </li>
+                                <li>
+                                    <p class="card-text text-left">
+                                        <i class="fa fa-fw fa-database color-theme"></i>
+                                        จัดเก็บข้อมูลได้ง่าย
+                                    </p>
+                                </li>
+                                <li>
+                                    <p class="card-text text-left">
+                                        <i class="fa fa-fw fa-cog color-theme"></i>
+                                        ปรับแต่งการทำงานได้
+                                    </p>
+                                </li>
+                                <li>
+                                    <p class="card-text text-left">
+                                        <i class="fa fa-fw fa-server color-theme"></i>
+                                        ไม่จำกัด bandwidth
+                                    </p>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="card-footer">
+                            <button type="button" class="btn btn-primary btn-package mb-2">รายละเอียดเพิ่มเติม</button>
+                            <button type="button" class="btn btn-primary btn-package" id="student3">เลือก</button>
+                        </div>
                     </div>
                 </div>
-                <div class="card mb-4 box-shadow">
-                    <div class="card-header bg-theme">Student PACK2
-                        <h2 class="mt-3">฿3,129</h2>
-                        <p class="f-20">/เดือน</p>
+            </div>
+            <div class="device-sm">
+                <div class="card-deck package-list text-center text-dark package-slider">
+                    <div class="card box-shadow">
+                        <div class="card-header bg-theme">Student PACK1
+                            <h2 class="mt-3">฿499</h2>
+                            <p class="f-20">/เดือน</p>
+                        </div>
+                        <div class="card-body">
+                            <p class="card-text text-left">แพ็กเกจเริ่มต้นสำหรับผู้ที่ต้องการ ทดลองใช้ cloud server และมี ความรู้พื้นฐานด้าน server</p>
+                        </div>
+                        <div class="card-body secondary">
+                            <ul>
+                                <li>
+                                    <p class="card-text text-left">
+                                        <i class="fa fa-fw fa-sliders color-theme"></i>
+                                        สามารถควบคุมผ่านBrowser
+                                    </p>
+                                </li>
+                                <li>
+                                    <p class="card-text text-left">
+                                        <i class="fa fa-fw fa-database color-theme"></i>
+                                        จัดเก็บข้อมูลได้ง่าย
+                                    </p>
+                                </li>
+                                <li>
+                                    <p class="text-white">ETC</p>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="card-footer">
+                            <button type="button" class="btn btn-primary btn-package mb-2">รายละเอียดเพิ่มเติม</button>
+                            <button type="button" class="btn btn-primary btn-package" id="student1">เลือก</button>
+                        </div>
                     </div>
-                    <div class="card-body">
-                        <p class="card-text text-left">แพ็กเกจสำหรับผู้ที่ใช้งานเป็นต้องการใช้พื้นที่จักเก็บและรวดเร็วในการดึงข้อมูลมากกว่าเดิม
-                        </p>
+                    <div class="card box-shadow">
+                        <div class="card-header bg-theme">Student PACK2
+                            <h2 class="mt-3">฿3,129</h2>
+                            <p class="f-20">/เดือน</p>
+                        </div>
+                        <div class="card-body">
+                            <p class="card-text text-left">แพ็กเกจสำหรับผู้ที่ใช้งานเป็นต้องการใช้พื้นที่จักเก็บและรวดเร็วในการดึงข้อมูลมากกว่าเดิม
+                            </p>
+                        </div>
+                        <div class="card-body secondary">
+                            <ul>
+                                <li>
+                                    <p class="card-text text-left">
+                                        <i class="fa fa-fw fa-sliders color-theme"></i>
+                                        สามารถควบคุมผ่านBrowser
+                                    </p>
+                                </li>
+                                <li>
+                                    <p class="card-text text-left">
+                                        <i class="fa fa-fw fa-database color-theme"></i>
+                                        จัดเก็บข้อมูลได้ง่าย
+                                    </p>
+                                </li>
+                                <li>
+                                    <p class="card-text text-left">
+                                        <i class="fa fa-fw fa-cog color-theme"></i>
+                                        ปรับแต่งการทำงานได้
+                                    </p>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="card-footer">
+                            <button type="button" class="btn btn-primary btn-package mb-2">รายละเอียดเพิ่มเติม</button>
+                            <button type="button" class="btn btn-primary btn-package" id="student2">เลือก</button>
+                        </div>
                     </div>
-                    <div class="card-body secondary">
-                        <ul>
-                            <li>
-                                <p class="card-text text-left">
-                                    <i class="fa fa-fw fa-sliders color-theme"></i>
-                                    สามารถควบคุมผ่านBrowser
-                                </p>
-                            </li>
-                            <li>
-                                <p class="card-text text-left">
-                                    <i class="fa fa-fw fa-database color-theme"></i>
-                                    จัดเก็บข้อมูลได้ง่าย
-                                </p>
-                            </li>
-                            <li>
-                                <p class="card-text text-left">
-                                    <i class="fa fa-fw fa-cog color-theme"></i>
-                                    ปรับแต่งการทำงานได้
-                                </p>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="card-footer">
-                        <button type="button" class="btn btn-primary btn-package mb-2">รายละเอียดเพิ่มเติม</button>
-                        <button type="button" class="btn btn-primary btn-package" id="student2">เลือก</button>
-                    </div>
-                </div>
-                <div class="card mb-4 box-shadow">
-                    <div class="card-header bg-theme">Student PACK3
-                        <h2 class="mt-3">฿6,249</h2>
-                        <p class="f-20">/เดือน</p>
-                    </div>
-                    <div class="card-body">
-                        <p class="card-text text-left">แพ็กเกจสำหรับการทำงานเป็นทีม เหมาะกับงานที่มีขนาดใหญ่</p>
-                    </div>
-                    <div class="card-body secondary">
-                        <ul>
-                            <li>
-                                <p class="card-text text-left">
-                                    <i class="fa fa-fw fa-sliders color-theme"></i>
-                                    สามารถควบคุมผ่านBrowser
-                                </p>
-                            </li>
-                            <li>
-                                <p class="card-text text-left">
-                                    <i class="fa fa-fw fa-database color-theme"></i>
-                                    จัดเก็บข้อมูลได้ง่าย
-                                </p>
-                            </li>
-                            <li>
-                                <p class="card-text text-left">
-                                    <i class="fa fa-fw fa-cog color-theme"></i>
-                                    ปรับแต่งการทำงานได้
-                                </p>
-                            </li>
-                            <li>
-                                <p class="card-text text-left">
-                                    <i class="fa fa-fw fa-server color-theme"></i>
-                                    ไม่จำกัด bandwidth
-                                </p>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="card-footer">
-                        <button type="button" class="btn btn-primary btn-package mb-2">รายละเอียดเพิ่มเติม</button>
-                        <button type="button" class="btn btn-primary btn-package" id="student3">เลือก</button>
+                    <div class="card box-shadow">
+                        <div class="card-header bg-theme">Student PACK3
+                            <h2 class="mt-3">฿6,249</h2>
+                            <p class="f-20">/เดือน</p>
+                        </div>
+                        <div class="card-body">
+                            <p class="card-text text-left">แพ็กเกจสำหรับการทำงานเป็นทีม เหมาะกับงานที่มีขนาดใหญ่</p>
+                        </div>
+                        <div class="card-body secondary">
+                            <ul>
+                                <li>
+                                    <p class="card-text text-left">
+                                        <i class="fa fa-fw fa-sliders color-theme"></i>
+                                        สามารถควบคุมผ่านBrowser
+                                    </p>
+                                </li>
+                                <li>
+                                    <p class="card-text text-left">
+                                        <i class="fa fa-fw fa-database color-theme"></i>
+                                        จัดเก็บข้อมูลได้ง่าย
+                                    </p>
+                                </li>
+                                <li>
+                                    <p class="card-text text-left">
+                                        <i class="fa fa-fw fa-cog color-theme"></i>
+                                        ปรับแต่งการทำงานได้
+                                    </p>
+                                </li>
+                                <li>
+                                    <p class="card-text text-left">
+                                        <i class="fa fa-fw fa-server color-theme"></i>
+                                        ไม่จำกัด bandwidth
+                                    </p>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="card-footer">
+                            <button type="button" class="btn btn-primary btn-package mb-2">รายละเอียดเพิ่มเติม</button>
+                            <button type="button" class="btn btn-primary btn-package" id="student3">เลือก</button>
+                        </div>
                     </div>
                 </div>
             </div>
