--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
                 <span class="header-section-sub">Package</span>
             </h2>
             <div class="device-md">
-                <div class="card-deck package-list mb-3 text-center text-dark">
+                <div class="card-deck package-list text-center text-dark">
                     <div class="card mb-4 box-shadow">
                         <div class="card-header bg-theme">Student PACK1
                             <h2 class="mt-3">฿499</h2>
@@ -510,6 +510,117 @@
                             <button type="button" class="btn btn-primary btn-package" id="student3">เลือก</button>
                         </div>
                     </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="solution" class="bg-theme pt-5 pb-5">
+        <div class="container">
+            <h2 class="header-section h-package mb-3 text-warning">Spidy
+                <span class="header-section-sub">Solution</span>
+            </h2>
+            <div class="row">
+                <div class="col-lg-3 col-md-4 mt-3">
+                    <img src="/images/solution/gaming.png" class="mx-auto d-block" width="100">
+                    <h3 class="pt-3">
+                        Gaming
+                    </h3>
+                    <p class="f-16">
+                        บริการที่ทำให้สามารถพัฒนาเกมในทุกประเภทและแพลตฟอร์มทั้งฟอร์มยักษ์ไปจนถึงเล็ก
+                    </p>
+                    <button type="button" class="btn btn-outline-light">เพิ่มเติม</button>
+                </div>
+                <div class="col-lg-3 col-md-4 mt-3">
+                    <img src="/images/solution/SAP.png" class="mx-auto d-block" width="100">
+                    <h3 class="pt-3">
+                        SAP
+                    </h3>
+                    <p class="f-16">
+                        พัฒนาซอฟต์แวร์ได้ทั้งขนาดเล็กและใหญ่จัดการข้อมูลให้เป็นระเบียบ
+                    </p>
+                    <button type="button" class="btn btn-outline-light">เพิ่มเติม</button>
+                </div>
+                <div class="col-lg-3 col-md-4 mt-3">
+                    <img src="/images/solution/e-com.png" class="mx-auto d-block" width="100">
+                    <h3 class="pt-3">
+                        E-commerce
+                    </h3>
+                    <p class="f-16">
+                        ขับเคลื่อนธุรกิจอีคอมเมิร์ซขนาดเล็กหรือใหญ่ด้วยโซลูชันที่สามารถปรับขยายได้และมีความปลอดภัยสูง
+                    </p>
+                    <button type="button" class="btn btn-outline-light">เพิ่มเติม</button>
+                </div>
+                <div class="col-lg-3 col-md-4 mt-3">
+                    <img src="/images/solution/IOT.png" class="mx-auto d-block" width="100">
+                    <h3 class="pt-3">
+                        IoT
+                    </h3>
+                    <p class="f-16">
+                        เชื่อมต่ออุปกรณ์ของคุณให้มีการตอบสนองที่ดีขึ้น
+                    </p>
+                    <button type="button" class="btn btn-outline-light">เพิ่มเติม</button>
+                </div>
+                <div class="col-lg-3 col-md-4 mt-3">
+                    <img src="/images/solution/webhost.png" class="mx-auto d-block" width="100">
+                    <h3 class="pt-3">
+                        Web Hosting
+                    </h3>
+                    <p class="f-16">
+                        จัดเก็บข้อมูลของคุณแบบง่ายๆรวดเร็วในการดึงข้อมูลสำรองข้อมูลของคุณและมีความปลอดภัย
+                    </p>
+                    <button type="button" class="btn btn-outline-light">เพิ่มเติม</button>
+                </div>
+                <div class="col-lg-3 col-md-4 mt-3">
+                    <img src="/images/solution/digitalmarketing.png" class="mx-auto d-block" width="100">
+                    <h3 class="pt-3">
+                        Digitals Marketing
+                    </h3>
+                    <p class="f-16">
+                        ทำการตลาดของคุณให้เป็นที่รู้จักและปลอดภัยสำหรับผู้ใช้งาน
+                    </p>
+                    <button type="button" class="btn btn-outline-light">เพิ่มเติม</button>
+                </div>
+                <div class="col-lg-3 col-md-4 mt-3">
+                    <img src="/images/solution/backup.png" class="mx-auto d-block" width="100">
+                    <h3 class="pt-3">
+                        Backup &amp; Restore
+                    </h3>
+                    <p class="f-16">
+                        สำรองข้อมูลของคุณและสามารถกู้คืนข้อมูลของคุณได้ทุกเม่ื่อ
+                    </p>
+                    <button type="button" class="btn btn-outline-light">เพิ่มเติม</button>
+                </div>
+                <div class="col-lg-3 col-md-4 mt-3">
+                    <img src="/images/solution/media.png" class="mx-auto d-block" width="100">
+                    <h3 class="pt-3">
+                        Media
+                    </h3>
+                    <p class="f-16">
+                        ประมวลผลและวิเคราะห์เนื้อหาวิดีโอและสื่อต่างๆของคุณ
+                    </p>
+                    <button type="button" class="btn btn-outline-light">เพิ่มเติม</button>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="our-customers" class="pt-5 pb-5">
+        <div class="container">
+            <h2 class="header-section h-package mb-3">OUR CUSTOMERS</h2>
+            <div class="row">
+                <div class="col mt-3">
+                    <img src="/images/university/CHULA.png" class="mx-auto d-block">
+                </div>
+                <div class="col mt-3">
+                    <img src="/images/university/SU.png" class="mx-auto d-block">
+                </div>
+                <div class="col mt-3">
+                    <img src="/images/university/KU.png" class="mx-auto d-block">
+                </div>
+                <div class="col mt-3">
+                    <img src="/images/university/TU.png" class="mx-auto d-block">
+                </div>
+                <div class="col mt-3">
+                    <img src="/images/university/mahidol.png" class="mx-auto d-block">
                 </div>
             </div>
         </div>
