--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@
             </h2>
             <div class="row">
                 <div class="col-lg-3 col-md-4 mt-3">
-                    <img src="/images/solution/gaming.png" class="mx-auto d-block" width="100">
+                    <img src="../images/solution/gaming.png" class="mx-auto d-block" width="100">
                     <h3 class="pt-3">
                         Gaming
                     </h3>
@@ -531,7 +531,7 @@
                     <button type="button" class="btn btn-outline-light">เพิ่มเติม</button>
                 </div>
                 <div class="col-lg-3 col-md-4 mt-3">
-                    <img src="/images/solution/SAP.png" class="mx-auto d-block" width="100">
+                    <img src="../images/solution/SAP.png" class="mx-auto d-block" width="100">
                     <h3 class="pt-3">
                         SAP
                     </h3>
@@ -541,7 +541,7 @@
                     <button type="button" class="btn btn-outline-light">เพิ่มเติม</button>
                 </div>
                 <div class="col-lg-3 col-md-4 mt-3">
-                    <img src="/images/solution/e-com.png" class="mx-auto d-block" width="100">
+                    <img src="../images/solution/e-com.png" class="mx-auto d-block" width="100">
                     <h3 class="pt-3">
                         E-commerce
                     </h3>
@@ -551,7 +551,7 @@
                     <button type="button" class="btn btn-outline-light">เพิ่มเติม</button>
                 </div>
                 <div class="col-lg-3 col-md-4 mt-3">
-                    <img src="/images/solution/IOT.png" class="mx-auto d-block" width="100">
+                    <img src="../images/solution/IOT.png" class="mx-auto d-block" width="100">
                     <h3 class="pt-3">
                         IoT
                     </h3>
@@ -561,7 +561,7 @@
                     <button type="button" class="btn btn-outline-light">เพิ่มเติม</button>
                 </div>
                 <div class="col-lg-3 col-md-4 mt-3">
-                    <img src="/images/solution/webhost.png" class="mx-auto d-block" width="100">
+                    <img src="../images/solution/webhost.png" class="mx-auto d-block" width="100">
                     <h3 class="pt-3">
                         Web Hosting
                     </h3>
@@ -571,7 +571,7 @@
                     <button type="button" class="btn btn-outline-light">เพิ่มเติม</button>
                 </div>
                 <div class="col-lg-3 col-md-4 mt-3">
-                    <img src="/images/solution/digitalmarketing.png" class="mx-auto d-block" width="100">
+                    <img src="../images/solution/digitalmarketing.png" class="mx-auto d-block" width="100">
                     <h3 class="pt-3">
                         Digitals Marketing
                     </h3>
@@ -581,7 +581,7 @@
                     <button type="button" class="btn btn-outline-light">เพิ่มเติม</button>
                 </div>
                 <div class="col-lg-3 col-md-4 mt-3">
-                    <img src="/images/solution/backup.png" class="mx-auto d-block" width="100">
+                    <img src="../images/solution/backup.png" class="mx-auto d-block" width="100">
                     <h3 class="pt-3">
                         Backup &amp; Restore
                     </h3>
@@ -591,7 +591,7 @@
                     <button type="button" class="btn btn-outline-light">เพิ่มเติม</button>
                 </div>
                 <div class="col-lg-3 col-md-4 mt-3">
-                    <img src="/images/solution/media.png" class="mx-auto d-block" width="100">
+                    <img src="../images/solution/media.png" class="mx-auto d-block" width="100">
                     <h3 class="pt-3">
                         Media
                     </h3>
@@ -608,19 +608,19 @@
             <h2 class="header-section h-package mb-3">OUR CUSTOMERS</h2>
             <div class="row">
                 <div class="col mt-3">
-                    <img src="/images/university/CHULA.png" class="mx-auto d-block">
+                    <img src="../images/university/CHULA.png" class="mx-auto d-block">
                 </div>
                 <div class="col mt-3">
-                    <img src="/images/university/SU.png" class="mx-auto d-block">
+                    <img src="../images/university/SU.png" class="mx-auto d-block">
                 </div>
                 <div class="col mt-3">
-                    <img src="/images/university/KU.png" class="mx-auto d-block">
+                    <img src="../images/university/KU.png" class="mx-auto d-block">
                 </div>
                 <div class="col mt-3">
-                    <img src="/images/university/TU.png" class="mx-auto d-block">
+                    <img src="../images/university/TU.png" class="mx-auto d-block">
                 </div>
                 <div class="col mt-3">
-                    <img src="/images/university/mahidol.png" class="mx-auto d-block">
+                    <img src="../images/university/mahidol.png" class="mx-auto d-block">
                 </div>
             </div>
         </div>
