--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@
             </h2>
             <div class="row">
                 <div class="col-lg-3 col-md-4 mt-3">
-                    <img src="../images/solution/gaming.png" class="mx-auto d-block" width="100">
+                    <img src="images/solution/gaming.png" class="mx-auto d-block" width="100">
                     <h3 class="pt-3">
                         Gaming
                     </h3>
@@ -531,7 +531,7 @@
                     <button type="button" class="btn btn-outline-light">เพิ่มเติม</button>
                 </div>
                 <div class="col-lg-3 col-md-4 mt-3">
-                    <img src="../images/solution/SAP.png" class="mx-auto d-block" width="100">
+                    <img src="images/solution/SAP.png" class="mx-auto d-block" width="100">
                     <h3 class="pt-3">
                         SAP
                     </h3>
@@ -541,7 +541,7 @@
                     <button type="button" class="btn btn-outline-light">เพิ่มเติม</button>
                 </div>
                 <div class="col-lg-3 col-md-4 mt-3">
-                    <img src="../images/solution/e-com.png" class="mx-auto d-block" width="100">
+                    <img src="images/solution/e-com.png" class="mx-auto d-block" width="100">
                     <h3 class="pt-3">
                         E-commerce
                     </h3>
@@ -551,7 +551,7 @@
                     <button type="button" class="btn btn-outline-light">เพิ่มเติม</button>
                 </div>
                 <div class="col-lg-3 col-md-4 mt-3">
-                    <img src="../images/solution/IOT.png" class="mx-auto d-block" width="100">
+                    <img src="images/solution/IOT.png" class="mx-auto d-block" width="100">
                     <h3 class="pt-3">
                         IoT
                     </h3>
@@ -561,7 +561,7 @@
                     <button type="button" class="btn btn-outline-light">เพิ่มเติม</button>
                 </div>
                 <div class="col-lg-3 col-md-4 mt-3">
-                    <img src="../images/solution/webhost.png" class="mx-auto d-block" width="100">
+                    <img src="images/solution/webhost.png" class="mx-auto d-block" width="100">
                     <h3 class="pt-3">
                         Web Hosting
                     </h3>
@@ -571,7 +571,7 @@
                     <button type="button" class="btn btn-outline-light">เพิ่มเติม</button>
                 </div>
                 <div class="col-lg-3 col-md-4 mt-3">
-                    <img src="../images/solution/digitalmarketing.png" class="mx-auto d-block" width="100">
+                    <img src="images/solution/digitalmarketing.png" class="mx-auto d-block" width="100">
                     <h3 class="pt-3">
                         Digitals Marketing
                     </h3>
@@ -581,7 +581,7 @@
                     <button type="button" class="btn btn-outline-light">เพิ่มเติม</button>
                 </div>
                 <div class="col-lg-3 col-md-4 mt-3">
-                    <img src="../images/solution/backup.png" class="mx-auto d-block" width="100">
+                    <img src="images/solution/backup.png" class="mx-auto d-block" width="100">
                     <h3 class="pt-3">
                         Backup &amp; Restore
                     </h3>
@@ -591,7 +591,7 @@
                     <button type="button" class="btn btn-outline-light">เพิ่มเติม</button>
                 </div>
                 <div class="col-lg-3 col-md-4 mt-3">
-                    <img src="../images/solution/media.png" class="mx-auto d-block" width="100">
+                    <img src="images/solution/media.png" class="mx-auto d-block" width="100">
                     <h3 class="pt-3">
                         Media
                     </h3>
@@ -608,23 +608,96 @@
             <h2 class="header-section h-package mb-3">OUR CUSTOMERS</h2>
             <div class="row">
                 <div class="col mt-3">
-                    <img src="../images/university/CHULA.png" class="mx-auto d-block">
+                    <img src="images/university/CHULA.png" class="mx-auto d-block">
                 </div>
                 <div class="col mt-3">
-                    <img src="../images/university/SU.png" class="mx-auto d-block">
+                    <img src="images/university/SU.png" class="mx-auto d-block">
                 </div>
                 <div class="col mt-3">
-                    <img src="../images/university/KU.png" class="mx-auto d-block">
+                    <img src="images/university/KU.png" class="mx-auto d-block">
                 </div>
                 <div class="col mt-3">
-                    <img src="../images/university/TU.png" class="mx-auto d-block">
+                    <img src="images/university/TU.png" class="mx-auto d-block">
                 </div>
                 <div class="col mt-3">
-                    <img src="../images/university/mahidol.png" class="mx-auto d-block">
+                    <img src="images/university/mahidol.png" class="mx-auto d-block">
                 </div>
             </div>
         </div>
     </section>
+    <section id="review" class="pt-5 pb-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6 col-md-12 mt-3 text-left">
+                    <h2 class="header-section h-package mb-3 text-white">RECENT CUSTOMER STORIES</h2>
+                    <p class="f-20 text-left pt-3 pb-2">“นี่คือส่วนหนึ่งของผู้ที่ใช้งานบริการ Cloud ของเรา มาร่วมเป็นส่วนหนึ่งของเรา เพื่อประสบการณ์การใช้ Cloud
+                        ที่ดีกว่า”
+                    </p>
+                    <button type="button" class="btn btn-outline-light">อ่านเพิ่มเติม</button>
+                </div>
+                <div class="col-lg-6 col-md-12 mt-3 text-left">
+                    <ul class="review-slider">
+                        <li>
+                            <div class="review-box">
+                                <div class="media">
+                                    <div class="media-icon">
+                                        <img src="images/user.png" alt="" class="img-fluid rounded-circle">
+                                    </div>
+
+                                    <div class="media-body">
+                                        <h3 class="media-heading">Dan Joldzic</h3>
+                                        <p class="media-text">1 may 2018</p>
+                                    </div>
+                                </div>
+                                <p class="f-18">“ตอบโจทย์การในงานของนักศึกษา ดีมากมี Solution หลากหลาย มีการใช้เทคโนโลยีที่ทันสมัย และยัง
+                                    ควบคุมการทำงานได้ง่ายด้วย ประหยัดงบผมได้มากเลยละ ทีมงาน ผม Happy”</p>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="review-box">
+                                <div class="media">
+                                    <div class="media-icon">
+                                        <img src="images/user.png" alt="" class="img-fluid rounded-circle">
+                                    </div>
+
+                                    <div class="media-body">
+                                        <h3 class="media-heading">Dan Joldzic</h3>
+                                        <p class="media-text">1 may 2018</p>
+                                    </div>
+                                </div>
+                                <p class="f-18">“ตอบโจทย์การในงานของนักศึกษา ดีมากมี Solution หลากหลาย มีการใช้เทคโนโลยีที่ทันสมัย และยัง
+                                    ควบคุมการทำงานได้ง่ายด้วย ประหยัดงบผมได้มากเลยละ ทีมงาน ผม Happy”</p>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="map-cantact" class="pt-5 pb-5">
+        <div class="container">
+            <div class="contact-location">
+                <h3 class="color-theme">เครือข่าย Global 100 Gbit
+                </h3>
+                <p class="text-dark">Spidy Base มีเครือข่ายทั่วโลกที่มีความหน่วงต่ำ ทำให้คุณสามารถปรับใช้โครงสร้างพื้นฐานด้าน บริการของคุณได้ใกล้กับฐานลูกค้าของคุณ
+                </p>
+                <select class="form-control form-control-lg location">
+                    <option>Thailand</option>
+                    <option>Japan</option>
+                </select>
+            </div>
+            <div class="contact-location--">
+                <img src="images/map.png" alt="" class="img-fluid">
+                <i class="fa fa-circle text-warning th" data-toggle="tooltip" data-placement="top" title="Thailand"></i>
+                <i class="fa fa-circle text-warning jp" data-toggle="tooltip" data-placement="top" title="Japan"></i>
+                <i class="fa fa-circle text-warning gm" data-toggle="tooltip" data-placement="top" title="Germany"></i>
+                <i class="fa fa-circle text-warning ccg" data-toggle="tooltip" data-placement="top" title="Chicago"></i>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <div class="container"></div>
+    </footer>
 </body>
 
 </html>
